# openmodel

./: README.md
backends/libopenmodel_backend_TEMPLATE/: Cargo.toml
backends/libopenmodel_backend_TEMPLATE/src/: lib.rs
backends/libopenmodel_backend_rllama/: Cargo.toml
backends/libopenmodel_backend_rllama/src/: lib.rs
libopenmodel_backend/: Cargo.toml
libopenmodel_backend/src/: lib.rs
libopenmodel_frontend/: Cargo.toml
libopenmodel_frontend/src/: lib.rs
libopenmodel_frontend_c/: Cargo.toml
libopenmodel_frontend_c/src/: lib.rs
openmodelctl/: Cargo.toml
openmodelctl/src/: main.rs
openmodeld/: Cargo.toml
openmodeld/docs/: api.md
openmodeld/src/: main.rs
