[package]
name = "openmodelctl"
version = "0.1.0"
edition = "2021"

[dependencies]
openmodel_frontend = { path="../libopenmodel_frontend" }
structopt = "0.3.26"
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version="1.33.0", features = ["full"] }
